--- a/2.html
+++ b/2.html
@@ -16,7 +16,7 @@
 
 <p>
 
-CSS에 대한 본문 내용
+Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
 
 </p>
 
