--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p>
 
-WEB에 대한 본문 내용
+	The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.
 
 </p>
 
