--- a/3.html
+++ b/3.html
@@ -16,7 +16,7 @@
 
 <p>
 
-JaveScript에 대한 본문 내용
+	JavaScript (/ˈdʒɑːvəskrɪpt/), often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
 
 </p>
 
